syntax = "proto3";

option go_package = "taskclient/kvado";

service Kvado {
    rpc FindBooksByAuthorID(FindBooksByAuthorIDRequest) returns (FindBooksResponse);
    rpc FindAuthorsByBookID(FindAuthorsByBookIDRequest) returns (FindAuthorsResponse);
    rpc FindAuthorsByBookName(FindAuthorsByBookNameRequest) returns (FindAuthorsResponse);
    rpc FindBooksByAuthorName(FindBooksByAuthorNameRequest) returns (FindBooksResponse);
}

message FindAuthorsByBookNameRequest {
    string book_name = 1;
}

message FindBooksByAuthorNameRequest {
    string author_name = 1;
}

message FindBooksByAuthorIDRequest {
    uint32 author_id = 1;
}

message FindBooksResponse {
    message Book {
        uint32 book_id = 1;
        string name = 2;
        string genre = 3;
        uint32 year = 4;
    }

    repeated Book books = 1;
}

message FindAuthorsByBookIDRequest {
    uint32 book_id = 1;
}

message FindAuthorsResponse {
    message Author {
        uint32 author_id = 1;
        string name = 2;
    }

    repeated Author authors = 1;
}

